--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
       :root {
         color-scheme: light dark;
         font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+        --tab-height: 1.37rem;
+        --tab-padding-y: 0.1575rem;
+        --tab-font-size: 0.9rem;
       }
 
       body {
@@ -55,12 +58,13 @@
         background: rgba(0, 0, 0, 0.02);
         background: color-mix(in srgb, currentColor 5%, transparent);
         color: inherit;
-        border-radius: 0.5rem;
+        border-radius: 0.4rem;
         transition: background 0.15s ease;
         user-select: none;
         cursor: grab;
         min-width: 0;
-        height: 2.25rem;
+        height: var(--tab-height);
+        font-size: var(--tab-font-size);
       }
 
       .tab:hover {
@@ -86,13 +90,13 @@
         color: inherit;
         font: inherit;
         cursor: pointer;
-        padding: 0.35rem 0.5rem;
+        padding: var(--tab-padding-y) 0.5rem;
       }
 
       .tab-button {
         display: inline-flex;
         align-items: center;
-        padding-right: 0.25rem;
+        padding-right: 0.35rem;
         flex: 1 1 auto;
         min-width: 0;
         overflow: hidden;
@@ -104,7 +108,7 @@
       .tab-close {
         display: inline-flex;
         align-items: center;
-        padding-left: 0.25rem;
+        padding-left: 0.35rem;
         line-height: 1;
         opacity: 0.7;
         flex: none;
@@ -116,8 +120,8 @@
 
       .add-tab {
         flex: none;
-        width: 2rem;
-        height: 2rem;
+        width: calc(var(--tab-height) + 0.25rem);
+        height: var(--tab-height);
         display: grid;
         place-items: center;
         font-size: 1.25rem;
